update circleCI config file: run migrate before run test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           command: |
             . ~/venv/bin/activate
             PYTEST_ADDOPTS="--junit-xml=~/artifacts/junit.xml --dc=Test --create-db" \
+            python manage.py migrate
             python manage.py test
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test-results
